--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+/* ================ Сбросс стилей ================ */
 * {
   padding: 0px;
   margin: 0px;
@@ -24,23 +25,53 @@ ul,
 ol {
   list-style: none;
 }
+
+.container {
+  height: 100%;
+  width: 100%;
+  max-width: 1536px;
+  margin-left: auto;
+  margin-right: auto;
+  border: 1px solid red;
+
+  /* display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 1fr;
+  justify-content: end; */
+}
+
+/* Стили для хедера */
+
 header {
   background: #f9fafb;
 }
 
-header > img {
-  padding: 25px 25px;
+.imgAndNav > img {
+  margin-top: 24px;
+  margin-bottom: 24px;
 }
 
-header > span {
+.headerNav {
   font-family: "Roboto", sans-serif;
-  font-weight: 400;
+  font-weight: 700;
   font-size: 16px;
   line-height: 1.5;
   color: #111827;
 }
 
-header > a {
+.headerSpan {
+  font-family: "Roboto", sans-serif;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.5;
+  color: #111827;
+  margin-top: 24px;
+
+  display: grid;
+  justify-content: end;
+}
+
+.tel {
   font-family: "Roboto", sans-serif;
   font-weight: 900;
   font-size: 36px;
@@ -56,15 +87,7 @@ header > a {
   color: #111827;
 }
 
-.footerNav {
-  font-family: "Roboto", sans-serif;
-  font-weight: 700;
-  font-size: 16px;
-  line-height: 1.5;
-  color: #111827;
-}
-
-header > button {
+.headerButton {
   border-radius: 4px;
   padding: 10px 28px;
   width: 196px;
@@ -72,6 +95,154 @@ header > button {
   background: #8b5cf6;
 
   font-family: "Roboto", sans-serif;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.5;
+  color: #f9fafb;
+}
+
+/* // Выравнивание текста хедера */
+
+/* .headerSpan {
+  display: flex;
+  flex-direction: column;
+} */
+
+/* .headerCallAndButton{
+    display: flex;
+    flex-direction: column;
+} */
+
+.headerNav {
+  display: flex;
+  gap: 24px;
+}
+
+.headerCallAndButton {
+  margin-top: 24px;
+  display: grid;
+  justify-content: end;
+}
+
+/* Стили для первой секции */
+
+.main-section {
+  background: #e5e7eb;
+  display: flex;
+}
+
+.display-flex {
+  display: flex;
+  justify-content: space-between;
+  gap: 24px;
+}
+
+h1 {
+  font-family: "Roboto", sans-serif;
+  font-weight: 900;
+  font-size: 36px;
+  line-height: 1.11111;
+  color: #111827;
+  padding-top: 72px;
+  margin-bottom: 12px;
+}
+
+.main-section-description {
+  font-family: "Roboto", sans-serif;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 1.4;
+  color: #111827;
+  margin-bottom: 16px;
+}
+
+.main-img {
+  border-radius: 16px;
+  width: 756px;
+}
+
+.filling-form {
+  border-radius: 16px;
+  padding: 24px 27px;
+  min-width: 756px;
+  background-color: #f9fafb;
+  margin-top: 72px;
+  text-align: center;
+}
+
+.span-calculator {
+  font-family: "Roboto", sans-serif;
+  font-weight: 700;
+  font-size: 30px;
+  line-height: 1.2;
+  color: #111827;
+  padding-bottom: 16px;
+}
+
+.delivery-calculation {
+  font-family: "Roboto", sans-serif;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 1.4;
+  color: #111827;
+  margin-top: 16px;
+  margin-bottom: 16px;
+}
+
+.delivery-calculation {
+  font-family: "Roboto", sans-serif;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.5;
+  text-align: center;
+  color: #111827;
+}
+
+.text {
+  border: 2px solid #111827;
+  border-radius: 4px;
+  padding: 12px;
+  width: 496px;
+  height: 48px;
+
+  font-family: "Roboto", sans-serif;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.5;
+  color: #9ca3af;
+}
+
+.customer-data {
+  border: 2px solid #111827;
+  border-radius: 4px;
+  padding: 12px;
+  width: 236px;
+  height: 48px;
+  margin-top: 24px;
+
+  font-family: "Formular", sans-serif;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.5;
+  color: #9ca3af;
+}
+
+.indent {
+  margin-right: 24px;
+}
+
+.city {
+  margin-bottom: 24px;
+}
+
+.main-section-button {
+  border-radius: 4px;
+  padding: 10px 28px;
+  width: 496px;
+  height: 44px;
+  background: #8b5cf6;
+
+  font-family: "Formular", sans-serif;
   font-weight: 700;
   font-size: 16px;
   line-height: 1.5;
