--- a/style.css
+++ b/style.css
@@ -420,11 +420,11 @@ h1 {
   background: #e5e7eb;
 }
 
-.any-questions-wrapper{
-  border-radius: 16px;
-  padding: 64px;
-  max-width: 1536px;
+.any-questions-wrapper {
   background: #f9fafb;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .any-questions {
@@ -433,6 +433,46 @@ h1 {
   font-size: 30px;
   line-height: 1.2;
   color: #111827;
-  text-align: center;
   margin-bottom: 32px;
+}
+
+.last-text {
+  border: 2px solid #111827;
+  border-radius: 4px;
+  padding: 12px;
+  width: 100%;
+
+  font-family: "Roboto", sans-serif;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.5;
+  color: #9ca3af;
+  width: calc(50% - 12px);
+}
+
+.message {
+  width: 100%; /* Занимает всю ширину родительского контейнера */
+  height: 150px; /* Установите высоту в соответствии с макетом */
+}
+
+.forma {
+  max-width: 497px;
+  text-align: center;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 24px;
+}
+
+.leave-request {
+  border-radius: 4px;
+  padding: 10px 28px;
+  background: #8b5cf6;
+  width: 100%;
+
+  font-family: "Roboto", sans-serif;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.5;
+  color: #f9fafb;
+  text-align: center;
 }
