--- a/style.css
+++ b/style.css
@@ -306,11 +306,11 @@ h1 {
   background-size: cover;
 }
 
-.right{
+.right {
   background-image: url(./assets/img/Right-switch.svg);
 }
 
-.feedback-wrapper{
+.feedback-wrapper {
   display: flex;
   justify-content: space-around;
   gap: 24px;
@@ -323,9 +323,6 @@ h1 {
   height: 350px;
   width: 100%;
   background: #f9fafb;
-  font-weight: 700;
-  font-size: 24px;
-  line-height: 1.33333;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -337,11 +334,13 @@ h1 {
   font-size: 24px;
   line-height: 1.33333;
   color: #6b7280;
-  margin-left: 43px;
-  margin-bottom: 32px;
+  margin: 0 0 32px 43px;
 }
 
 .description-feedback > p {
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 1.33333;
   margin-top: 32px;
   margin-left: 43px;
 }
@@ -470,4 +469,146 @@ h1 {
   line-height: 1.33333;
   color: #4b5563;
   margin-top: 24px;
+}
+
+/* ================ Адаптив 1536 ================ */
+
+@media screen and (max-width: 1536px) {
+  .container {
+    max-width: 1024px;
+  }
+
+/* Адаптив хедер */
+
+  .tel {
+    font-size: 30px;
+    line-height: 1.2;
+  }
+
+  .call-Russia {
+    font-size: 20px;
+    line-height: 1.4;
+  }
+
+/* Адаптив первая секция */
+
+  h1 {
+    font-size: 30px;
+    line-height: 1.2;
+    margin-top: 48px;
+  }
+
+  .main-img {
+    max-width: 505px;
+    max-height: 232px;
+    margin-top: 48px;
+  }
+
+  .main-section-wrap {
+    flex-direction: column;
+  }
+
+  .left-part {
+    flex-direction: row;
+    gap: 16px;
+  }
+
+  .main-section-description {
+    margin-bottom: 0px;
+  }
+
+  .right-part {
+    max-width: 1026px;
+    width: 100%;
+    margin-top: 0px;
+  }
+
+  .text {
+    max-width: 606px;
+  }
+
+  .customer-data {
+    max-width: 291px;
+    margin-top: 0px;
+    width: calc(50% - 12px);
+  }
+
+  .indent {
+    margin-right: 0px;
+  }
+
+  .form {
+    max-width: 606px;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 24px;
+    margin: 0 auto;
+  }
+
+  .main-section-button {
+    max-width: 606px;
+  }
+
+  /* Адаптив вторая секция */
+
+  .our-benefits {
+    padding-top: 48px;
+    margin-bottom: 64px;
+  }
+
+/* Адаптив третья секция */
+
+  .document-list {
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+
+  .document-list-wrapper {
+    display: flex;
+    flex-direction: column;
+    gap: 4px;
+  }
+
+  .document-title {
+    margin-bottom: 24px;
+  }
+
+  .more-documents {
+    margin: 12px auto 48px;
+  }
+
+/* Адаптив четвертая секция */
+
+  .description-feedback > p {
+    font-size: 18px;
+    line-height: 1.55556;
+    margin: 16px 16px 0 16px;
+  }
+
+  .name {
+    font-size: 16px;
+    line-height: 1.5;
+    margin-bottom: 16px;
+  }
+
+  .description-feedback {
+    max-width: 396px;
+    height: 276px;
+    margin-bottom: 48px;
+  }
+
+/* Адаптив футер */
+
+  .footer-tel {
+    font-size: 30px;
+    line-height: 1.2;
+  }
+  .footer-call-Russia {
+    font-size: 20px;
+    line-height: 1.4;
+  }
+
+  .main-footer-nav {
+    gap: 14px;
+  }
 }
